# betamark

./: README.md  pyproject.toml
betamark/: arc_agi.py  bicycle.py  ocr.py  tiny_mmlu.py
tests/: test_arc.py  test_arc_agi.py
