[tool.poetry]
name = "betamark"
version = "0.1.0"
description = "Experimental lightweight benchmark"
authors = ["Laurence Liang <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
datasets = "^3.0.2"
tqdm = "^4.66.5"
imageio = "^2.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
